# PPMtoConc

./: .gitignore  README.md  api.py  api_mw.py  convertion.py  format_data.py  mw.py  pyproject.toml  requirements.txt  run.py
data/: 9606-iBAQ_MCF7_Geiger_2012_uniprot.txt  genes.tsv
example_workflow/: run.py
old_version/: mw.py  run.py
output/: MCF7_test.txt  cleaned_proteomics_data.csv  cleaned_proteomics_data_2.csv
ppm_to_conc/: api.py  conversion.py  data_io.py  io.py
scripts/: run.py  run_conversion.py
tests/: test_api.py  test_conversion.py  test_data_io.py
